@@ -1,3 +1,11 @@
+Fri Jan 30 18:30:30 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: fix some leaks.  Implement a simple euler method
+	  graphical solver for the slopefield.  Currently it is only
+	  accessible by a temporary function just to see if it works.  It
+	  needs a proper interface and also a UI interface.
+	  Slopefield/Vectorfield do not yet have proper GEL interface either
+
 Mon Jan 26 23:59:06 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: Finish the GUI plotting of vectorfield and
